--- a/web/app/components/user/user.html
+++ b/web/app/components/user/user.html
@@ -1,1 +1,25 @@
-<h2>user</h2>
+<div ng-controller="userController">
+    <h2>用户列表</h2>
+
+    <div class="container-fluid">
+        <div class="row-fluid">
+            <div class="span12">
+                <table class="table">
+                    <thead>
+                    <tr>
+                        <th>名称</th>
+                        <th>ID值</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr ng-repeat="server in list">
+                        <td>{{server.name}}</td>
+                        <td>{{server.id}}</td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+
+</div>
