--- a/web/app/components/network/ListPorts.html
+++ b/web/app/components/network/ListPorts.html
@@ -1,5 +1,5 @@
-<div ng-controller="networkController">
-    <h2>网络列表清单</h2>
+<div ng-controller="portController">
+    <h2>端口列表清单</h2>
 
     <div class="container-fluid">
         <div class="row-fluid">
@@ -7,13 +7,13 @@
                 <table class="table">
                     <thead>
                     <tr>
-                        <th>名称</th>
+                        <th>状态</th>
                         <th>ID值</th>
                     </tr>
                     </thead>
                     <tbody>
                     <tr ng-repeat="server in list">
-                        <td>{{server.name}}</td>
+                        <td>{{server.status}}</td>
                         <td>{{server.id}}</td>
                     </tr>
                     </tbody>
