--- a/web/app/components/network/ListSubnets.html
+++ b/web/app/components/network/ListSubnets.html
@@ -1,5 +1,5 @@
-<div ng-controller="networkController">
-    <h2>网络列表清单</h2>
+<div ng-controller="listSubnetsController">
+    <h2>子网列表清单</h2>
 
     <div class="container-fluid">
         <div class="row-fluid">
