--- a/web/app/components/network/route.html
+++ b/web/app/components/network/route.html
@@ -8,12 +8,14 @@
                     <thead>
                     <tr>
                         <th>名称</th>
+                        <th>状态</th>
                         <th>ID值</th>
                     </tr>
                     </thead>
                     <tbody>
                     <tr ng-repeat="server in list">
                         <td>{{server.name}}</td>
+                        <td>{{server.status}}</td>
                         <td>{{server.id}}</td>
                     </tr>
                     </tbody>
