--- a/web/app/components/user/program.html
+++ b/web/app/components/user/program.html
@@ -1,1 +1,28 @@
-<h2>program</h2>
+<div ng-controller="programController">
+    <h2>项目列表</h2>
+    <div class="container-fluid">
+        <div class="row-fluid">
+            <div class="span12">
+                <table class="table">
+                    <thead>
+                    <tr>
+                        <th>名称</th>
+                        <th>描述</th>
+                        <th>项目ID</th>
+                        <th>激活</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr ng-repeat="server in list">
+                        <td>{{server.name}}</td>
+                        <td>{{server.description}}</td>
+                        <td>{{server.id}}</td>
+                        <td>{{server.enabled}}</td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+
+</div>
