--- a/web/app/components/ObjectStorage/ListContainers.html
+++ b/web/app/components/ObjectStorage/ListContainers.html
@@ -14,14 +14,63 @@
                     </thead>
                     <tbody>
                     <tr ng-repeat="server in list">
-                        <td>{{server.name}}</td>
+                        <td>
+                            <button class="btn btn-primary btn-lg" data-toggle="modal" data-target="#modal-container-45187" , ng-click="doPressed($event)">{{server.name}}
+                            </button>
+                        </td>
                         <td>{{server.count}}</td>
                         <td>{{server.bytes /1024/1024}}</td>
                     </tr>
                     </tbody>
                 </table>
+
+                <!--遮罩窗口样式-->
+                <div id="modal-container-45187" class="modal hide fade" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                        <h3 id="myModalLabel" ng-module="dialogTitie">
+                            {{dialogTitie}}
+                        </h3>
+                    </div>
+                    <div class="modal-body">
+
+                        <p>
+                        <div class="container-fluid">
+                            <div class="row-fluid">
+                                <div class="span12">
+                                    <table class="table table-hover">
+                                        <thead>
+                                        <tr>
+                                            <th>
+                                                文件名
+                                            </th>
+                                            <th>
+                                                文件大小(MB)
+                                            </th>
+                                        </tr>
+                                        </thead>
+                                        <tbody>
+                                        <tr ng-repeat="file in fileList">
+                                            <td>{{file.name}}</td>
+                                            <td>{{file.bytes/1024/1024}}</td>
+                                        </tr>
+                                        </tbody>
+                                    </table>
+                                </div>
+                            </div>
+                        </div>
+                        </p>
+
+                    </div>
+                    <div class="modal-footer">
+                        <button class="btn" data-dismiss="modal" aria-hidden="true">关闭</button>
+                    </div>
+                </div>
+
             </div>
+
         </div>
     </div>
+</div>
 
 </div>
