--- a/web/app/components/network/network.html
+++ b/web/app/components/network/network.html
@@ -9,6 +9,8 @@
                     <tr>
                         <th>名称</th>
                         <th>状态</th>
+                        <th>共享的</th>
+                        <th>管理员状态</th>
                         <th>ID值</th>
                     </tr>
                     </thead>
@@ -16,7 +18,10 @@
                     <tr ng-repeat="server in list">
                         <td>{{server.name}}</td>
                         <td>{{server.status}}</td>
+                        <td>{{server.shared}}</td>
+                        <td>{{server.admin_state_up}}</td>
                         <td>{{server.id}}</td>
+
                     </tr>
                     </tbody>
                 </table>
