--- a/web/app/components/servers/images.html
+++ b/web/app/components/servers/images.html
@@ -1,1 +1,32 @@
-<h2>images</h2>
+<div ng-controller="imageController">
+    <h2>镜像</h2>
+    <div class="container-fluid">
+        <div class="row-fluid">
+            <div class="span12">
+                <table class="table">
+                    <thead>
+                    <tr>
+                        <th>镜像名称</th>
+                        <th>状态</th>
+                        <th>公有</th>
+                        <th>受保护的</th>
+                        <th>镜像格式</th>
+                        <th>配置</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr ng-repeat="server in list">
+                        <td>{{server.name}}</td>
+                        <td>{{server.status}}</td>
+                        <td>{{server.visibility}}</td>
+                        <td>{{server.protected}}</td>
+                        <td>{{server.disk_format}}</td>
+                        <td>{{server.size}}</td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+
+</div>
