--- a/web/app/components/network/ListFloatingIPs.html
+++ b/web/app/components/network/ListFloatingIPs.html
@@ -1,12 +1,23 @@
 <div>
-    <h2>端口列表清单</h2>
+    <h3>浮动IP清单</h3>
+    <div class="container-fluid">
+        <div class="row-fluid">
+            <div class="span12">
+                <button type="button" class="btn btn-info btn-lg" ng-click="addUser()" data-target="#addUser"
+                        data-target="#modal-container-553362" role="button" data-toggle="modal">添加浮动IP
+                </button>
+                <button type="button" class="btn btn-danger btn-lg" ng-click="deleteUser()">删除浮动IP</button>
+            </div>
+        </div>
+    </div>
 
     <div class="container-fluid">
         <div class="row-fluid">
             <div class="span12">
-                <table class="table">
+                <table class="table table-striped table-bordered table-hover">
                     <thead>
-                    <tr>
+                    <tr class="success">
+                        <th><input type="checkbox" id="selectAll"></th>
                         <th>状态</th>
                         <th>IP地址</th>
                         <th>ID值</th>
@@ -14,9 +25,13 @@
                     </thead>
                     <tbody>
                     <tr ng-repeat="server in list">
-                        <td>{{server.status}}</td>
+                        <td><input type="checkbox"></td>
+                        <td><a href="#viewUser?id={{server.id}}">{{server.status}}</a></td>
                         <td>{{server.fixed_ip_address}}</td>
                         <td>{{server.id}}</td>
+                        <td>
+                            <button type="button" class="btn btn-primary btn-sm cellBtn">编 辑</button>
+                        </td>
                     </tr>
                     </tbody>
                 </table>
