--- a/web/app/components/servers/images.html
+++ b/web/app/components/servers/images.html
@@ -3,9 +3,21 @@
     <div class="container-fluid">
         <div class="row-fluid">
             <div class="span12">
-                <table class="table">
-                    <thead>
-                    <tr>
+                <button type="button" class="btn btn-info btn-lg" ng-click="addUser()" data-target="#addUser"
+                        data-target="#modal-container-553362" role="button" data-toggle="modal">添加镜像
+                </button>
+                <button type="button" class="btn btn-danger btn-lg" ng-click="deleteUser()">删除镜像</button>
+            </div>
+        </div>
+    </div>
+
+    <div class="container-fluid">
+        <div class="row-fluid">
+            <div class="span12">
+                <table class="table table-striped table-bordered table-hover">
+                <thead>
+                    <tr class="success">
+                        <th><input type="checkbox" id="selectAll"></th>
                         <th>镜像名称</th>
                         <th>状态</th>
                         <th>公有</th>
@@ -16,17 +28,20 @@
                     </thead>
                     <tbody>
                     <tr ng-repeat="server in list">
-                        <td>{{server.name}}</td>
+                        <td><input type="checkbox"></td>
+                        <td><a href="#viewUser?id={{server.id}}">{{server.name}}</a></td>
                         <td>{{server.status}}</td>
                         <td>{{server.visibility}}</td>
                         <td>{{server.protected}}</td>
                         <td>{{server.disk_format}}</td>
                         <td>{{server.size}}</td>
+                        <td>
+                            <button type="button" class="btn btn-primary btn-sm cellBtn">编 辑</button>
+                        </td>
                     </tr>
                     </tbody>
                 </table>
             </div>
         </div>
     </div>
-
 </div>
