--- a/web/app/components/servers/instances.html
+++ b/web/app/components/servers/instances.html
@@ -3,9 +3,22 @@
     <div class="container-fluid">
         <div class="row-fluid">
             <div class="span12">
-                <table class="table">
-                    <thead>
-                    <tr>
+                <button type="button" class="btn btn-info btn-lg" ng-click="addUser()" data-target="#addUser"
+                        data-target="#modal-container-553362" role="button" data-toggle="modal">添加云主机
+                </button>
+                <button type="button" class="btn btn-danger btn-lg" ng-click="deleteUser()">删除云主机</button>
+            </div>
+        </div>
+    </div>
+
+    <div class="container-fluid">
+        <div class="row-fluid">
+            <div class="span12">
+                <table class="table table-striped table-bordered table-hover">
+
+                <thead>
+                    <tr class="success">
+                        <th><input type="checkbox" id="selectAll"></th>
                         <th>云主机名称</th>
                         <th>IP地址</th>
                         <th>值对</th>
@@ -18,7 +31,8 @@
                     </thead>
                     <tbody>
                     <tr ng-repeat="server in list">
-                        <td>{{server.name}}</td>
+                        <td><input type="checkbox"></td>
+                        <td><a href="#viewUser?id={{server.id}}">{{server.name}}</a></td>
                         <td>{{server.addresses.admin_internal_net[0].addr}}</td>
                         <td>{{server.key_name}}</td>
                         <td>{{server["OS-EXT-STS:vm_state"]}}</td>
@@ -26,6 +40,9 @@
                         <td>{{server["OS-EXT-STS:task_state"]}}</td>
                         <td>{{server["OS-EXT-STS:power_state"]}}</td>
                         <td>{{server.created}}</td>
+                        <td>
+                            <button type="button" class="btn btn-primary btn-sm cellBtn">编 辑</button>
+                        </td>
                     </tr>
                     </tbody>
                 </table>
