--- a/web/app/components/servers/safety.html
+++ b/web/app/components/servers/safety.html
@@ -3,17 +3,33 @@
     <div class="container-fluid">
         <div class="row-fluid">
             <div class="span12">
-                <table class="table">
+                <button type="button" class="btn btn-info btn-lg" ng-click="addUser()" data-target="#addUser"
+                        data-target="#modal-container-553362" role="button" data-toggle="modal">添加安全组
+                </button>
+                <button type="button" class="btn btn-danger btn-lg" ng-click="deleteUser()">删除安全组</button>
+            </div>
+        </div>
+    </div>
+
+    <div class="container-fluid">
+        <div class="row-fluid">
+            <div class="span12">
+                <table class="table table-striped">
                     <thead>
-                    <tr>
+                    <tr class="success">
+                        <th><input type="checkbox" id="selectAll"></th>
                         <th>安全组名称</th>
                         <th>描述</th>
                     </tr>
                     </thead>
                     <tbody>
                     <tr ng-repeat="server in list">
-                        <td>{{server.name}}</td>
+                        <td><input type="checkbox"></td>
+                        <td><a href="#viewUser?id={{server.id}}">{{server.name}}</a></td>
                         <td>{{server.description}}</td>
+                        <td>
+                            <button type="button" class="btn btn-primary btn-sm cellBtn">编 辑</button>
+                        </td>
                     </tr>
                     </tbody>
                 </table>
@@ -25,17 +41,33 @@
     <div class="container-fluid">
         <div class="row-fluid">
             <div class="span12">
-                <table class="table">
+                <button type="button" class="btn btn-info btn-lg" ng-click="addUser()" data-target="#addUser"
+                        data-target="#modal-container-553362" role="button" data-toggle="modal">添加密钥对
+                </button>
+                <button type="button" class="btn btn-danger btn-lg" ng-click="deleteUser()">删除密钥对</button>
+            </div>
+        </div>
+    </div>
+
+    <div class="container-fluid">
+        <div class="row-fluid">
+            <div class="span12">
+                <table class="table table-striped">
                     <thead>
-                    <tr>
+                    <tr class="success">
+                        <th><input type="checkbox" id="selectAll1"></th>
                         <th>密钥对名称</th>
                         <th>指纹</th>
                     </tr>
                     </thead>
                     <tbody>
                     <tr ng-repeat="server in list1">
-                        <td>{{server.keypair.name}}</td>
+                        <td><input type="checkbox"></td>
+                        <td><a href="#viewKeypair?name={{server.keypair.name}}">{{server.keypair.name}}</a></td>
                         <td>{{server.keypair.fingerprint}}</td>
+                        <td>
+                            <button type="button" class="btn btn-primary btn-sm cellBtn">编 辑</button>
+                        </td>
                     </tr>
                     </tbody>
                 </table>
@@ -47,27 +79,36 @@
     <div class="container-fluid">
         <div class="row-fluid">
             <div class="span12">
-                <table class="table">
-                    <thead>
-                    <tr>
+                <button type="button" class="btn btn-info btn-lg" ng-click="addUser()" data-target="#addUser"
+                        data-target="#modal-container-553362" role="button" data-toggle="modal">添加浮动IP
+                </button>
+                <button type="button" class="btn btn-danger btn-lg" ng-click="deleteUser()">删除浮动IP</button>
+            </div>
+        </div>
+    </div>
+
+    <div class="container-fluid">
+        <div class="row-fluid">
+            <div class="span12">
+                <table class="table table-striped table-bordered table-hover">
+                <thead>
+                    <tr class="success">
+                        <th><input type="checkbox" id="selectAll2"></th>
                         <th>IP地址</th>
                         <th>已映射固定IP地址</th>
                         <th>状态</th>
-                        <th>资源池</th>
                     </tr>
                     </thead>
                     <tbody>
                     <tr ng-repeat="server in list2">
-                        <td>{{server.floating_ip_address}}</td>
+                        <td><input type="checkbox"></td>
+                        <td><a href="#viewUser?id={{server.id}}">{{server.floating_ip_address}}</a></td>
                         <td>{{server.fixed_ip_address}}</td>
                         <td>{{server.status}}</td>
-                    <tr ng-="servers in list3">
-                        <!--<td>{{server.ip}}</td>-->
-                        <!--<td>{{server.fixed_ip}}</td>-->
-                        <td>{{server.pool}}</td>
+                        <td>
+                            <button type="button" class="btn btn-primary btn-sm cellBtn">编 辑</button>
+                        </td>
                     </tr>
-                    </tr>
-
                     </tbody>
                 </table>
             </div>
@@ -97,5 +138,4 @@
             <!--</div>-->
         <!--</div>-->
     <!--</div>-->
-
 </div>
