--- a/web/app/components/user/program.html
+++ b/web/app/components/user/program.html
@@ -3,9 +3,21 @@
     <div class="container-fluid">
         <div class="row-fluid">
             <div class="span12">
-                <table class="table">
+                <button type="button" class="btn btn-info btn-lg" ng-click="addUser()" data-target="#addUser"
+                        data-target="#modal-container-553362" role="button" data-toggle="modal">添加项目
+                </button>
+                <button type="button" class="btn btn-danger btn-lg" ng-click="deleteUser()">删除项目</button>
+            </div>
+        </div>
+    </div>
+
+    <div class="container-fluid">
+        <div class="row-fluid">
+            <div class="span12">
+                <table class="table table-striped table-bordered table-hover">
                     <thead>
-                    <tr>
+                    <tr class="success">
+                        <th><input type="checkbox" id="selectAll"></th>
                         <th>名称</th>
                         <th>描述</th>
                         <th>项目ID</th>
@@ -14,10 +26,14 @@
                     </thead>
                     <tbody>
                     <tr ng-repeat="server in list">
-                        <td>{{server.name}}</td>
+                        <td><input type="checkbox"></td>
+                        <td><a href="#viewProgram?id={{server.id}}">{{server.name}}</a></td>
                         <td>{{server.description}}</td>
                         <td>{{server.id}}</td>
                         <td>{{server.enabled}}</td>
+                        <td>
+                            <button type="button" class="btn btn-primary btn-sm cellBtn">编 辑</button>
+                        </td>
                     </tr>
                     </tbody>
                 </table>
