--- a/web/app/components/user/user.html
+++ b/web/app/components/user/user.html
@@ -10,10 +10,11 @@
             </div>
         </div>
     </div>
+
     <div class="container-fluid">
         <div class="row-fluid">
             <div class="span12">
-                <table class="table table-striped">
+                    <table class="table table-striped table-bordered table-hover">
                     <thead>
                     <tr class="success">
                         <th><input type="checkbox" id="selectAll"></th>
