2017-02-16:增加首页图表(未实现真实数据显示);增加对stack的显示

--- a/web/app/components/summary/totalSummary.html
+++ b/web/app/components/summary/totalSummary.html
@@ -2,43 +2,43 @@
     <h3>总体概览</h3>
     <div style="width:100%;">
         <div clss="subContainer" style="float: left;width: 20%;margin-bottom:10px">
-            <div id="myStat1" data-dimension="150" data-text="35%" data-info="New Clients" data-width="15"
+            <div id="myStat1" data-dimension="150" data-text="35%" data-info="实例" data-width="15"
                  data-fontsize="17"
                  data-percent="35" data-fgcolor="#61a9dc" data-bgcolor="#eee"></div>
         </div>
 
         <div clss="subContainer" style="float: left;width: 20%;margin-bottom:10px">
-            <div id="myStat2" data-dimension="150" data-text="80%" data-info="New Clients" data-width="15"
+            <div id="myStat2" data-dimension="150" data-text="80%" data-info="虚拟内核" data-width="15"
                  data-fontsize="17"
                  data-percent="35" data-fgcolor="#61a9dc" data-bgcolor="#eee"></div>
         </div>
 
         <div clss="subContainer" style="float: left;width: 20%;margin-bottom:10px">
-            <div id="myStat3" data-dimension="150" data-text="45%" data-info="New Clients" data-width="15"
+            <div id="myStat3" data-dimension="150" data-text="45%" data-info="内存" data-width="15"
                  data-fontsize="17"
                  data-percent="35" data-fgcolor="#61a9dc" data-bgcolor="#eee"></div>
         </div>
 
         <div clss="subContainer" style="float: left;width: 20%;margin-bottom:10px">
-            <div id="myStat4" data-dimension="150" data-text="15%" data-info="New Clients" data-width="15"
+            <div id="myStat4" data-dimension="150" data-text="15%" data-info="Floating IPs" data-width="15"
                  data-fontsize="17"
                  data-percent="35" data-fgcolor="#61a9dc" data-bgcolor="#eee"></div>
         </div>
 
         <div clss="subContainer" style="float: left;width: 20%;margin-bottom:10px">
-            <div id="myStat5" data-dimension="150" data-text="0%" data-info="New Clients" data-width="15"
+            <div id="myStat5" data-dimension="150" data-text="0%" data-info="安全组" data-width="15"
                  data-fontsize="17"
                  data-percent="35" data-fgcolor="#61a9dc" data-bgcolor="#eee"></div>
         </div>
 
         <div clss="subContainer" style="float: left;width: 20%;margin-bottom:10px">
-            <div id="myStat6" data-dimension="150" data-text="20%" data-info="New Clients" data-width="15"
+            <div id="myStat6" data-dimension="150" data-text="20%" data-info="云硬盘" data-width="15"
                  data-fontsize="17"
                  data-percent="35" data-fgcolor="#61a9dc" data-bgcolor="#eee"></div>
         </div>
 
         <div clss="subContainer" style="float: left;width: 20%;margin-bottom:10px">
-            <div id="myStat7" data-dimension="150" data-text="5%" data-info="New Clients" data-width="15"
+            <div id="myStat7" data-dimension="150" data-text="5%" data-info="卷存储" data-width="15"
                  data-fontsize="17"
                  data-percent="35" data-fgcolor="#61a9dc" data-bgcolor="#eee"></div>
         </div>
