--- a/web/app/components/servers/stackDetail.html
+++ b/web/app/components/servers/stackDetail.html
@@ -1,5 +1,5 @@
 <div>
-    <h3>栈详情:{{stack.stack_name}}</h3>
+    <h2>栈详情:{{stack.stack_name}}</h2>
     <div class="col-sm-12" style="margin-top:20px;">
         <div class="container-fluid">
             <div class="row-fluid">
@@ -22,25 +22,122 @@
                         <div class="tab-content">
                             <div class="tab-pane active" id="showSummary">
                                 <p>
-                                    第一部分内容.
+                                <h3>栈概况</h3>
+                                <hr class="header_rule">
+                                <div ng-if="hasstack" ng-init="hasDetail = true">
+                                    <h4>基本信息</h4>
+                                    <dt>名称</dt>
+                                    <dd>{{stack.stack_name}}</dd>
+                                    <dt>ID</dt>
+                                    <dd>{{stack.id}}</dd>
+                                    <dt>描述</dt>
+                                    <dd>{{stack.description}}</dd>
+
+                                    <hr class="header_rule">
+                                    <h4>状态</h4>
+                                    <dt>已创建</dt>
+                                    <dd>{{stack.creation_time}}</dd>
+                                    <dt>最近更新</dt>
+                                    <dd>{{stack.updated_time}}</dd>
+                                    <dt>状态</dt>
+                                    <dd>{{stack.stack_status}} ：{{stack.stack_status_reason}}</dd>
+
+                                    <hr class="header_rule">
+                                    <h4>输出</h4>
+                                    <dt>Master_Instances_Group_Networks</dt>
+                                    <dd>{{stack.outputs[0].description}}</dd>
+                                    <dd>{{stack.outputs[0].output_value}}</dd>
+                                    <dt>Slave_Instances_Group_Networks</dt>
+                                    <dd>{{stack.outputs[1].description}}</dd>
+                                    <dd>{{stack.outputs[1].output_value}}</dd>
+
+                                    <hr class="header_rule">
+                                    <h4>栈参数</h4>
+                                    <dt>OS::project_id</dt>
+                                    <dd>{{stack.parameters["OS::project_id"]}}</dd>
+                                    <dt>OS::stack_id</dt>
+                                    <dd>{{stack.parameters["OS::stack_id"]}}</dd>
+                                    <dt>OS::stack_name</dt>
+                                    <dd>{{stack.parameters["OS::stack_name"]}}</dd>
+
+                                    <hr class="header_rule">
+                                    <h4>启动参数</h4>
+                                    <dt>超时</dt>
+                                    <dd>{{stack.timeout_mins}}</dd>
+                                    <dt>不能回滚</dt>
+                                    <dd>{{stack.disable_rollback}}</dd>
+                                </div>
                                 </p>
                             </div>
                             <div class="tab-pane " id="showResources">
                                 <p>
-                                    第二部分内容.
-                                </p>
-                            </div>
-                            <div class="tab-pane" id="showEvents">
-                                <p>
-                                    第三部分内容.
-                                </p>
-                            </div>
-                            <div class="tab-pane" id="showTemplates">
-                                <p>
-                                    第四部分内容.
+                                <table class="table table-striped table-bordered table-hover">
+                                    <thead>
+                                    <tr class="success">
+                                        <th><input type="checkbox" id="selectAll"></th>
+                                        <th>栈资源</th>
+                                        <th>资源</th>
+                                        <th>栈资源类型</th>
+                                        <th>日期已更新</th>
+                                        <th>状态</th>
+                                        <th>状态原因</th>
+                                    </tr>
+                                    </thead>
+                                    <tbody>
+                                    <tr ng-repeat="resource in list1">
+                                        <td><input type="checkbox"></td>
+                                        <td><a href="#/viewResource?id={{stack.id}}&name={{stack.stack_name}}">{{resource.resource_name}}</a></td>
+                                        <td><a force-Href=#viewStack?id={{resource.physical_resource_id}}&stackName={{resource.resource_name}}>{{resource.physical_resource_id}}</a></td>
+                                        <td>{{resource.resource_type}}</td>
+                                        <td>{{resource.updated_time}}</td>
+                                        <td>{{resource.resource_status}}</td>
+                                        <td>{{resource.resource_status_reason}}</td>
+                                        <td>
+                                            <button type="button" class="btn btn-primary btn-sm cellBtn">编辑</button>
+                                        </td>
+                                    </tr>
+                                    </tbody>
+                                </table>
                                 </p>
                             </div>
 
+                            <div class="tab-pane" id="showEvents">
+                                <p>
+                                <table class="table table-striped table-bordered table-hover">
+                                    <thead>
+                                    <tr class="success">
+                                        <th><input type="checkbox" id="selectAll1"></th>
+                                        <th>栈资源</th>
+                                        <th>事件后时间</th>
+                                        <th>状态</th>
+                                        <th>状态原因</th>
+                                    </tr>
+                                    </thead>
+                                    <tbody>
+                                    <tr ng-repeat="event in list">
+                                        <td><input type="checkbox"></td>
+                                        <td><a href="#viewUser?id={{event.id}}">{{event.resource_name}}</a></td>
+                                        <td>{{event.event_time}}</td>
+                                        <td>{{event.resource_status}}</td>
+                                        <td>{{event.resource_status_reason}}</td>
+                                        <td>
+                                            <button type="button" class="btn btn-primary btn-sm cellBtn">编辑</button>
+                                        </td>
+                                    </tr>
+                                    </tbody>
+                                </table>
+                                </p>
+                            </div>
+
+                            <div class="tab-pane" id="showTemplates">
+                                <p>
+                                <h3>栈模板</h3>
+                                <hr class="header_rule">
+                                <div ng-if="hastemplate" ng-init="hasDetail = true">
+                                    <dd>{{stacktemplate}}</dd>
+                                </div>
+                                </p>
+                            </div>
                         </div>
                     </div>
                 </div>
